--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/main.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -441,50 +440,50 @@
             <form class="form" action="#">
                 <p class="form__text">Оставьте свои данные, мы вам перезвоним</p>
 
-                <div class="form-field">
-                    <label for="name" class="form-label">Имя</label>
-                    <span class="input-wrap">
-                        <input id="name" class="form-input" type="text" required>
-                        <svg class="form-icon" width="18" height="18">
+                <div class="form__field">
+                    <label for="name" class="form__label">Имя</label>
+                    <span class="form__input-wrap">
+                        <input id="name" class="form__input" type="text" required>
+                        <svg class="form__icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-person-black"></use>
                         </svg>
                     </span>
                 </div>
 
-                <div class="form-field">
-                    <label for="tel" class="form-label">Телефон</label>
-                    <span class="input-wrap">
-                        <input id="tel" class="form-input" type="tel" required>
-                        <svg class="form-icon" width="18" height="18">
+                <div class="form__field">
+                    <label for="tel" class="form__label">Телефон</label>
+                    <span class="form__input-wrap">
+                        <input id="tel" class="form__input" type="tel" required>
+                        <svg class="form__icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-phone-black"></use>
                         </svg>
                     </span>
                 </div>
 
-                <div class="form-field">
-                    <label for="mail" class="form-label">Почта</label>
-                    <span class="input-wrap">
-                        <input id="mail" class="form-input" type="email" required>
-                        <svg class="form-icon" width="18" height="18">
+                <div class="form__field">
+                    <label for="mail" class="form__label">Почта</label>
+                    <span class="form__input-wrap">
+                        <input id="mail" class="form__input" type="email" required>
+                        <svg class="form__icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-email-black"></use>
                         </svg>
                     </span>
                 </div>
 
-                <label class="form-field textarea">
-                    <span class="form-label">Комментарий</span>
-                    <textarea class="form-textarea" name="comment" placeholder="Введите текст"></textarea>
+                <label class="form__field textarea">
+                    <span class="form__label">Комментарий</span>
+                    <textarea class="form__textarea" name="comment" placeholder="Введите текст"></textarea>
                 </label>
 
-                <label class="form-field agreement">
-                    <input class="checkbox-input" type="checkbox" name="agreement" id="agreement">
-                    <span class="checkbox"></span>
-                    <span class="form-agreement">Соглашаюсь с рассылкой и принимаю
-                        <a class="form-link" href="">Условия договора</a>
+                <label class="form__field agreement">
+                    <input class="form__checkbox-input" type="checkbox" name="agreement" id="agreement">
+                    <span class="form__checkbox"></span>
+                    <span class="form__agreement">Соглашаюсь с рассылкой и принимаю
+                        <a class="form__link" href="">Условия договора</a>
                     </span>
                 </label>
 
-                <button class="form-button" type="submit">Отправить</button>
+                <button class="form__button btn" type="submit">Отправить</button>
 
             </form>
         
