--- a/portfolio.html
+++ b/portfolio.html
@@ -81,152 +81,152 @@
                 <ul class="gallery">
                     <li class="gallery__item">
                         <a href="" class="gallery__link">
-                            <div class="gallery-thumb">
-                                <img class="gallery-thumb__image" src="./images/img-8-min.jpg" width="370" height="294" alt="фото компьютера">
-                                <div class="gallery-overlay">
-                                    <p class="gallery-overlay__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                            <div class="gallery__thumb">
+                                <img src="./images/img-8-min.jpg" width="370" height="294" alt="фото компьютера">
+                                <div class="gallery__overlay">
+                                    <p class="gallery__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
-                            <div class="gallery-box">
-                                <h2 class="gallery-box__title">Технокряк</h2>
-                                <p class="gallery-box__text">Веб-сайт</p>
+                            <div class="gallery__box">
+                                <h2 class="gallery__title">Технокряк</h2>
+                                <p class="gallery__text">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
                     <li class="gallery__item">
                         <a href="" class="gallery__link">
-                            <div class="gallery-thumb">
-                                <img class="gallery-thumb__image" src="./images/img-9-min.jpg" width="370" height="294" alt="игроки баскетбола борются за мяч">
-                                <div class="gallery-overlay">
-                                    <p class="gallery-overlay__text">Технокряк это современная площадка распространения коронавируса. Компании
+                            <div class="gallery__thumb">
+                                <img src="./images/img-9-min.jpg" width="370" height="294" alt="игроки баскетбола борются за мяч">
+                                <div class="gallery__overlay">
+                                    <p class="gallery__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
                                         используют эту платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
-                            <div class="gallery-box">
-                                <h2 class="gallery-box__title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                                <p class="gallery-box__text">Дизайн</p>
+                            <div class="gallery__box">
+                                <h2 class="gallery__title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                                <p class="gallery__text">Дизайн</p>
                             </div>
                         </a>
                     </li>
                     <li class="gallery__item">
                         <a href="" class="gallery__link">
-                            <div class="gallery-thumb">
-                                <img class="gallery-thumb__image" src="./images/img-10-min.jpg" width="370" height="294" alt="лого ресторана">
-                                <div class="gallery-overlay">
-                                    <p class="gallery-overlay__text">Технокряк это современная площадка распространения коронавируса. Компании
+                            <div class="gallery__thumb">
+                                <img src="./images/img-10-min.jpg" width="370" height="294" alt="лого ресторана">
+                                <div class="gallery__overlay">
+                                    <p class="gallery__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
                                         используют эту платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
-                            <div class="gallery-box">
-                                <h2 class="gallery-box__title">Ресторан <span lang="en">Seafood</span></h2>
-                                <p class="gallery-box__text">Приложение</p>
+                            <div class="gallery__box">
+                                <h2 class="gallery__title">Ресторан <span lang="en">Seafood</span></h2>
+                                <p class="gallery__text">Приложение</p>
                             </div>
                         </a>
                     </li>
                     <li class="gallery__item">
                         <a href="" class="gallery__link">
-                            <div class="gallery-thumb">
-                                <img class="gallery-thumb__image" src="./images/img-11-min.jpg" width="370" height="294" alt="наушники">
-                                <div class="gallery-overlay">
-                                    <p class="gallery-overlay__text">Технокряк это современная площадка распространения коронавируса. Компании
+                            <div class="gallery__thumb">
+                                <img src="./images/img-11-min.jpg" width="370" height="294" alt="наушники">
+                                <div class="gallery__overlay">
+                                    <p class="gallery__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
                                         используют эту платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
-                            <div class="gallery-box">
-                                <h2 class="gallery-box__title">Проект <span lang="en">Prime</span></h2>
-                                <p class="gallery-box__text">Маркетинг</p>
+                            <div class="gallery__box">
+                                <h2 class="gallery__title">Проект <span lang="en">Prime</span></h2>
+                                <p class="gallery__text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
                     <li class="gallery__item">
                         <a href="" class="gallery__link">
-                            <div class="gallery-thumb">
-                                <img class="gallery-thumb__image" src="./images/img-12-min.jpg" width="370" height="294" alt="коробочки">
-                                <div class="gallery-overlay">
-                                    <p class="gallery-overlay__text">Технокряк это современная площадка распространения коронавируса. Компании
+                            <div class="gallery__thumb">
+                                <img src="./images/img-12-min.jpg" width="370" height="294" alt="коробочки">
+                                <div class="gallery__overlay">
+                                    <p class="gallery__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
                                         используют эту платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
-                            <div class="gallery-box">
-                                <h2 class="gallery-box__title">Проект <span lang="en">Boxes</span></h2>
-                                <p class="gallery-box__text">Приложение</p>
+                            <div class="gallery__box">
+                                <h2 class="gallery__title">Проект <span lang="en">Boxes</span></h2>
+                                <p class="gallery__text">Приложение</p>
                             </div>
                         </a>
                     </li>
                     <li class="gallery__item">
                         <a href="" class="gallery__link">
-                            <div class="gallery-thumb">
-                                <img class="gallery-thumb__image" src="./images/img-13-min.jpg" width="370" height="294" alt="фото экрана компьютера с открытым вебсайтом">
-                                <div class="gallery-overlay">
-                                    <p class="gallery-overlay__text">
+                            <div class="gallery__thumb">
+                                <img src="./images/img-13-min.jpg" width="370" height="294" alt="фото экрана компьютера с открытым вебсайтом">
+                                <div class="gallery__overlay">
+                                    <p class="gallery__overlay-text">
                                         Технокряк это современная площадка распространения коронавируса. Компании
                                         используют эту платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
                                 </div>
                             </div>
-                            <div class="gallery-box">
-                                <h2 class="gallery-box__title" lang="en">Inspiration has no Borders</h2>
-                                <p class="gallery-box__text">Веб-сайт</p>
+                            <div class="gallery__box">
+                                <h2 class="gallery__title" lang="en">Inspiration has no Borders</h2>
+                                <p class="gallery__text">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
                     <li class="gallery__item">
                         <a href="" class="gallery__link">
-                            <div class="gallery-thumb">
-                                <img class="gallery-thumb__image" src="./images/img-14-min.jpg" width="370" height="294" alt="книга">
-                                <div class="gallery-overlay">
-                                    <p class="gallery-overlay__text">
+                            <div class="gallery__thumb">
+                                <img src="./images/img-14-min.jpg" width="370" height="294" alt="книга">
+                                <div class="gallery__overlay">
+                                    <p class="gallery__overlay-text">
                                         Технокряк это современная площадка распространения коронавируса. Компании
                                         используют эту платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
                                 </div>
                             </div>
-                            <div class="gallery-box">
-                                <h2 class="gallery-box__title">Издание <span lang="en">Limited Edition</span></h2>
-                                <p class="gallery-box__text">Дизайн</p>
+                            <div class="gallery__box">
+                                <h2 class="gallery__title">Издание <span lang="en">Limited Edition</span></h2>
+                                <p class="gallery__text">Дизайн</p>
                             </div>
                         </a>
                     </li>
                     <li class="gallery__item">
                         <a href="" class="gallery__link">
-                            <div class="gallery-thumb">
-                                <img class="gallery-thumb__image" src="./images/img-15-min.jpg" width="370" height="294" alt="лейбел">
-                                <div class="gallery-overlay">
-                                    <p class="gallery-overlay__text">
+                            <div class="gallery__thumb">
+                                <img src="./images/img-15-min.jpg" width="370" height="294" alt="лейбел">
+                                <div class="gallery__overlay">
+                                    <p class="gallery__overlay-text">
                                         Технокряк это современная площадка распространения коронавируса. Компании
                                         используют эту платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
                                 </div>
                             </div>
-                            <div class="gallery-box">
-                                <h2 class="gallery-box__title">Проект <span lang="en">LAB</span></h2>
-                                <p class="gallery-box__text">Маркетинг</p>
+                            <div class="gallery__box">
+                                <h2 class="gallery__title">Проект <span lang="en">LAB</span></h2>
+                                <p class="gallery__text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
                     <li class="gallery__item">
                         <a href="" class="gallery__link">
-                            <div class="gallery-thumb">
-                                <img class="gallery-thumb__image" src="./images/img-16-min.jpg" width="370" height="294" alt="фото компютера">
-                                <div class="gallery-overlay">
-                                    <p class="gallery-overlay__text">
+                            <div class="gallery__thumb">
+                                <img src="./images/img-16-min.jpg" width="370" height="294" alt="фото компютера">
+                                <div class="gallery__overlay">
+                                    <p class="gallery__overlay-text">
                                         Технокряк это современная площадка распространения коронавируса. Компании
                                         используют эту платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
                                 </div>
                             </div>
-                            <div class="gallery-box">
-                                <h2 class="gallery-box__title" lang="en">Growing Business</h2>
-                                <p class="gallery-box__text">Приложение</p>
+                            <div class="gallery__box">
+                                <h2 class="gallery__title" lang="en">Growing Business</h2>
+                                <p class="gallery__text">Приложение</p>
                             </div>
                         </a>
                     </li>
