--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </section>
 
         <!-- Section What we do -->
-        <section class="section section-work">
+        <section class="section section--work">
             <div class="container">
                 <h2 class="section__title">Чем мы занимаемся</h2>
                 <ul class="work">
@@ -156,7 +156,7 @@
                     <li class="team__item">
                         <img class="team__image" src="./images/img-4.jpg" alt="фото сотрудника" width="270">
                         <div class="team__block">
-                            <h3 class="team__name">Игорь Демьяненко</h3>
+                            <h3 class="team__title">Игорь Демьяненко</h3>
                             <p class="team__position">Product Designer</p>
                             <ul class="socials-list">
                                 <li class="socials-list__item">
@@ -193,7 +193,7 @@
                     <li class="team__item">
                         <img class="team__image" src="./images/img-5.jpg" alt="фото сотрудника" width="270">
                         <div class="team__block">
-                            <h3 class="team__name">Ольга Репина</h3>
+                            <h3 class="team__title">Ольга Репина</h3>
                             <p class="team__position">Frontend Developer</p>
                             <ul class="socials-list">
                                 <li class="socials-list__item">
@@ -230,7 +230,7 @@
                     <li class="team__item">
                         <img class="team__image" src="./images/img-6.jpg" alt="фото сотрудника" width="270">
                         <div class="team__block">
-                            <h3 class="team__name">Николай Тарасов</h3>
+                            <h3 class="team__title">Николай Тарасов</h3>
                             <p class="team__position">Marketing</p>
                             <ul class="socials-list">
                                 <li class="socials-list__item">
@@ -267,7 +267,7 @@
                     <li class="team__item">
                         <img class="team__image" src="./images/img-7.jpg" alt="фото сотрудника" width="270">
                         <div class="team__block">
-                            <h3 class="team__name">Михаил Ермаков</h3>
+                            <h3 class="team__title">Михаил Ермаков</h3>
                             <p class="team__position">UI Designer</p>
                             <ul class="socials-list">
                                 <li class="socials-list__item">
